Changed upload form (AntDesign); adaptive layout; table sort; Routing (HashRouter);

--- a/src/components/common/Content.module.css
+++ b/src/components/common/Content.module.css
@@ -32,9 +32,14 @@
 .forBalanceContainer {
 }
 
-.uploadForm {
+.uploadContainer {
     margin: 40px auto;
-    font-size: 20px;
-    font-weight: bold;
+    width: 500px;
     text-align: center;
+}
+
+@media (max-width: 767px) {
+    .uploadContainer {
+        width: 300px;
+    }
 }
